--- a/views/index.html
+++ b/views/index.html
@@ -12,12 +12,12 @@
     			<div id="title"><span class="title">Currency Exchanger</span></div>
     			<div id="menus">
                     <ul id="menubar">
-                    <li class="currentpage"><a href="../index.php">Home</a></li>
-                    <li><a href="Currencies.php">Currencies</a></li>
-                    <li><a href="Countries.php">Countries</a></li>
-                    <li><a href="Currencyrates.php">Currencyrates</a></li>
-                    <li><a href="Register.php">Register</a></li>
-                    <li><a href="Login.php">Login</a></li>
+                    <li><a href="../index.php">Home</a></li>
+                    <li><a href="../views/Currencies.php">Currencies</a></li>
+                    <li><a href="../views/Countries.php">Countries</a></li>
+                    <li><a href="../views/Currencyrates.php">Currencyrates</a></li>
+                    <li><a href="../views/Register.php">Register</a></li>
+                    <li><a href="../views/Login.php">Login</a></li>
                     </ul>
                 </div>
     		</div>
@@ -32,7 +32,7 @@
     			</div>
     		</div>
         	<div id="footer">
-            	<center><a href="Overview.php">Overview</a></center>
+            	<center><a href="../views/Overview.php">Overview</a></center>
             	<center>Currency Exchanger Copyright Reserved</center>
             </div>
         </div>
